# VoxelFruitNinja

./: .gitignore  CMakeLists.txt  README.md  main.cpp  readme.md
Models/: appelsin.vox  banan.vox  gulKube.vox  tomat.vox  vannmelon.vox
shaders/: raycast.comp  screen.frag  screen.vert
src/: Compute.cpp  Compute.h  Config.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
